--- a/index.html
+++ b/index.html
@@ -1,2 +1,22 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Kode With Klossy</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            Koding
+          </li>
+          <li>
+            Like a Kloss
+          </li>
+        </ul>
+      </nav>
+      <h3>Kode With Klossy</h3>
+    </header>
+  </body>
+</html>
